feat: complete SensorHub V1
